--- a/style/architects.css
+++ b/style/architects.css
@@ -41,6 +41,11 @@ main{
     max-width: 1440px;
     margin: 0 auto;
 }
+
+.section-title{
+  font-size: 45px;
+  font-weight: bold;
+}
   /* header section style */
 
   /* nav bar style */
@@ -108,17 +113,51 @@ main{
     max-width: 537px;
   }
 
-  .features-title{
-    font-size: 45px;
-    font-weight: bold;
-  }
-
   .quick-list{
     font-weight: 500px;
   }
   .features{
     color: rgba(255, 144, 14, 1);
   }
+
+  /* facts related style */
+
+    .facts-description{
+      max-width: 540px;
+    }
+    .facts-container{ 
+      display: grid;
+      grid-template-columns: repeat(4,1fr);
+      margin-top: 100px;
+    }
+
+    .fact-card{ 
+      border: 1px solid #FF900E;
+      border-radius: 8px;
+      height: 240px;
+      width: 240px;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 30px;
+    }
+
+    .facts{
+      margin-top: 130px;
+    }
+
+    .fact-number  {
+      font-size: 45px;
+      font-weight: 600;
+      margin-top: 10px;
+      margin-bottom: 5px;
+    }
+
+    .fact-name{ 
+      font-size: 20px;
+      font-weight: 600;
+      margin-top: 0px;
+    }
   /* responsive design */
 
   @media screen and (max-width: 576px) {
